--- a/src/home.html
+++ b/src/home.html
@@ -141,44 +141,113 @@
             <div class="section-projects--photo">
               <div class="section-projects--photoarea">
                 <div class="section-projects--photoinfo">
-                  <img src="" alt="">
+                  <h5>NATURE</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
                 </div>
+                <img src="./media/foto1.jpg" alt="">
               </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>TABLE</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto2.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>BEANS</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto3.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>TECHNOLOGY</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto4.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto5.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto6.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto7.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto9.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto7.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto2.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto5.jpg" alt="">
+              </div>
             </div>
             <div class="section-projects--photo">
-              ...
+              <div class="section-projects--photoarea">
+                <div class="section-projects--photoinfo">
+                  <h5>ABOUT</h5>
+                  <p>Viagem no tempo hoje mesmo</p>
+                </div>
+                <img src="./media/foto6.jpg" alt="">
+              </div>
             </div>
           </div>
+          <a href="#" class="button">More Projects</a>
         </div>
       </div>
     </section>
