--- a/src/home.html
+++ b/src/home.html
@@ -584,26 +584,62 @@
                         </div>
                         Endereço completão que irá ter algum tamanho
                     </div>
-                    <div class="section-map--info-item">
-                        <div class="section-map--info-item-img">
-                            <img src="assets/images/telefone.png" />
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/telefone.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
                         </div>
-                        Endereço completão que irá ter algum tamanho
-                    </div>
-                    <div class="section-map--info-item">
-                        <div class="section-map--info-item-img">
-                            <img src="assets/images/arroba.png" />
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/arroba.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
                         </div>
-                        Endereço completão que irá ter algum tamanho
-                    </div>
-                    <div class="section-map--info-item">
-                        <div class="section-map--info-item-img">
-                            <img src="assets/images/web.png" />
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/web.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
                         </div>
-                        Endereço completão que irá ter algum tamanho
-                    </div>
+                </div>
             </div>
-        </div>
+    </section>
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/arroba.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/web.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                </div>
+            </div>
+    </section>
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/arroba.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                        <div class="section-map--info-item">
+                            <div class="section-map--info-item-img">
+                                <img src="assets/images/web.png" />
+                            </div>
+                            Endereço completão que irá ter algum tamanho
+                        </div>
+                </div>
+            </div>
     </section>
 
 
